k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - image: ghcr.io/cs-muic/scalable-23t1-p1-danamestrial/ums-backend:main
          imagePullPolicy: Always
          name: backend
          ports:
          - containerPort: 8080
      imagePullSecrets:
        - name: dockerconfigjson-github-com
