k8s/es-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: es
  labels:
    app: es
spec:
  selector:
    matchLabels:
      app: es
  replicas: 1
  template:
    metadata:
      labels:
        app: es
    spec:
      containers:
      - name: es
        image: mariadb:latest
        ports:
        - containerPort: 3306
