k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend-app
        image: ghcr.io/cs-muic/scalable-23t1-p1-danamestrial/ums-frontend:main
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
        - name: dockerconfigjson-github-com
