k8s/mariadb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  labels:
    app: mariadb
spec:
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: mariadb:latest
        ports:
        - containerPort: 3306
          name: mariadb
        volumeMounts:
          - name: mariadb-pv
            mountPath: /var/lib/mysql
      volumes:
        - name: mariadb-pv
          persistentVolumeClaim:
            claimName: mariadb-pv-claim
