k8s/es-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: es
spec:
  selector:
    app: es
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
