k8s/ums-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ums-ingress
  namespace: default

spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: frontend
            port:
              number: 80
        path: /
        pathType: Prefix
      - backend:
          service:
            name: backend
            port:
              number: 8080
        path: /api/
        pathType: Prefix
status:
  loadBalancer: {}
